--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/gluster-mixin/exporter-absent.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/gluster-mixin/exporter-absent.alerts.yaml
@@ -1,10 +1,10 @@
-- name: exporter-absent
+- name: exporter-absent.alerts
   rules:
-    - alert: GlusterExporterDown
-      annotations:
-        message: "GlusterExporter has disappeared from Prometheus target discovery."
-      expr: |
-        absent(up{job="gluster-exporter"}==1)
-      for: 15m
-      labels:
-        severity: critical
+  - alert: GlusterExporterDown
+    annotations:
+      message: GlusterExporter has disappeared from Prometheus target discovery.
+    expr: |
+      absent(up{job="gluster-exporter"}==1)
+    for: 15m
+    labels:
+      severity: critical
