--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-storage.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-storage.alerts.yaml
@@ -1,38 +1,43 @@
-- name: kubernetes-storage
+- name: kubernetes-storage.alerts
   rules:
-    - alert: KubePersistentVolumeUsageCritical
-      annotations:
-        message: "The PersistentVolume claimed by {{ $labels.persistentvolumeclaim }} in Namespace {{ $labels.namespace }} is only {{ $value | humanizePercentage }} free."
-        runbook_url: "https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubepersistentvolumeusagecritical"
-      expr: |
-        kubelet_volume_stats_available_bytes{job="kubelet"}
+  - alert: KubePersistentVolumeUsageCritical
+    annotations:
+      message: The PersistentVolume claimed by {{ $labels.persistentvolumeclaim }}
+        in Namespace {{ $labels.namespace }} is only {{ $value | humanizePercentage
+        }} free.
+      runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubepersistentvolumeusagecritical
+    expr: |
+      kubelet_volume_stats_available_bytes{job="kubelet", metrics_path="/metrics"}
+        /
+      kubelet_volume_stats_capacity_bytes{job="kubelet", metrics_path="/metrics"}
+        < 0.03
+    for: 1m
+    labels:
+      severity: critical
+  - alert: KubePersistentVolumeFullInFourDays
+    annotations:
+      message: Based on recent sampling, the PersistentVolume claimed by {{ $labels.persistentvolumeclaim
+        }} in Namespace {{ $labels.namespace }} is expected to fill up within four
+        days. Currently {{ $value | humanizePercentage }} is available.
+      runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubepersistentvolumefullinfourdays
+    expr: |
+      (
+        kubelet_volume_stats_available_bytes{job="kubelet", metrics_path="/metrics"}
           /
-        kubelet_volume_stats_capacity_bytes{job="kubelet"}
-          < 0.03
-      for: "1m"
-      labels:
-        severity: critical
-    - alert: KubePersistentVolumeFullInFourDays
-      annotations:
-        message: "Based on recent sampling, the PersistentVolume claimed by {{ $labels.persistentvolumeclaim }} in Namespace {{ $labels.namespace }} is expected to fill up within four days. Currently {{ $value | humanizePercentage }} is available."
-        runbook_url: "https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubepersistentvolumefullinfourdays"
-      expr: |
-        (
-          kubelet_volume_stats_available_bytes{job="kubelet"}
-            /
-          kubelet_volume_stats_capacity_bytes{job="kubelet"}
-        ) < 0.15
-        and
-        predict_linear(kubelet_volume_stats_available_bytes{job="kubelet"}[6h], 4 * 24 * 3600) < 0
-      for: 5m
-      labels:
-        severity: critical
-    - alert: KubePersistentVolumeErrors
-      annotations:
-        message: "The persistent volume {{ $labels.persistentvolume }} has status {{ $labels.phase }}."
-        runbook_url: "https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubepersistentvolumeerrors"
-      expr: |
-        kube_persistentvolume_status_phase{phase=~"Failed|Pending",job="kube-state-metrics"} > 0
-      for: 5m
-      labels:
-        severity: critical
+        kubelet_volume_stats_capacity_bytes{job="kubelet", metrics_path="/metrics"}
+      ) < 0.15
+      and
+      predict_linear(kubelet_volume_stats_available_bytes{job="kubelet", metrics_path="/metrics"}[6h], 4 * 24 * 3600) < 0
+    for: 1h
+    labels:
+      severity: critical
+  - alert: KubePersistentVolumeErrors
+    annotations:
+      message: The persistent volume {{ $labels.persistentvolume }} has status {{
+        $labels.phase }}.
+      runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubepersistentvolumeerrors
+    expr: |
+      kube_persistentvolume_status_phase{phase=~"Failed|Pending",job="kube-state-metrics"} > 0
+    for: 5m
+    labels:
+      severity: critical
