--- a/ansible/install_infra/roles/keepalived/tasks/main.yml
+++ b/ansible/install_infra/roles/keepalived/tasks/main.yml
@@ -21,11 +21,28 @@
     pkg: keepalived
     state: present
 
+- name: Prepare Keepalived conf folder
+  file:
+    path: "{{ keepalived.include_conf_dir }}"
+    state: directory
+
 - name: Configure Keepalived
   template:
     dest: /etc/keepalived/keepalived.conf
     src: keepalived.conf.j2
   notify: Restart Keepalived
+
+- name: Configure virtual IP
+  import_tasks: add-virtual-ip.yml
+  vars:
+    keepalived_instance:
+      name: default
+      is_master: "{{ keepalived_instance_is_master }}"
+      interface: "{{ keepalived_instance_interface }}"
+      priority: "{{ keepalived_instance_priority }}"
+      auth_pass: "{{ keepalived_instance_auth_pass }}"
+      virtual_ip: "{{ keepalived_instance_virtual_ip }}"
+      virtual_router_id: 101
 
 - name: Auto-start Keepalived
   service:
