--- a/ansible/install_infra/roles/kubernetes-node-join/tasks/main.yml
+++ b/ansible/install_infra/roles/kubernetes-node-join/tasks/main.yml
@@ -1,13 +1,17 @@
 ---
 
 - name: Configure UFW for Kubernetes masters
-  import_tasks: ../../firewall/tasks/add-applications.yml
+  include_role:
+    name: firewall
+    tasks_from: add-applications
   vars:
     ufw_applications: "{{ kubernetes_master_ufw_applications }}"
   when: "'kubernetes_masters' in group_names"
 
 - name: Configure UFW for Kubernetes workers
-  import_tasks: ../../firewall/tasks/add-applications.yml
+  include_role:
+    name: firewall
+    tasks_from: add-applications
   vars:
     ufw_applications: "{{ kubernetes_worker_ufw_applications }}"
 
