--- a/ansible/install_infra/roles/dnsmasq/tasks/main.yml
+++ b/ansible/install_infra/roles/dnsmasq/tasks/main.yml
@@ -1,7 +1,9 @@
 ---
 
 - name: Configure UFW for dnsmasq
-  import_tasks: ../../firewall/tasks/add-applications.yml
+  include_role:
+    name: firewall
+    tasks_from: add-applications
   vars:
     ufw_applications: "{{ dnsmasq_ufw_applications }}"
 
