--- a/ansible/install_infra/roles/keepalived/tasks/main.yml
+++ b/ansible/install_infra/roles/keepalived/tasks/main.yml
@@ -7,7 +7,9 @@
     state: present
 
 - name: Configure UFW for Keepalived
-  import_tasks: ../../firewall/tasks/add-applications.yml
+  include_role:
+    name: firewall
+    tasks_from: add-applications
   vars:
     ufw_applications: "{{ keepalived_ufw_applications | default([]) }}"
 
@@ -32,17 +34,17 @@
     src: keepalived.conf.j2
   notify: Restart Keepalived
 
-- name: Configure virtual IP
-  import_tasks: add-virtual-ip.yml
-  vars:
-    keepalived_instance:
-      name: default
-      is_master: "{{ keepalived_instance_is_master }}"
-      interface: "{{ keepalived_instance_interface }}"
-      priority: "{{ keepalived_instance_priority }}"
-      auth_pass: "{{ keepalived_instance_auth_pass }}"
-      virtual_ip: "{{ keepalived_instance_virtual_ip }}"
-      virtual_router_id: 101
+#- name: Configure virtual IP
+#  import_tasks: add-virtual-ip.yml
+#  vars:
+#    keepalived_instance:
+#      name: default
+#      is_master: "{{ keepalived_instance_is_master }}"
+#      interface: "{{ keepalived_instance_interface }}"
+#      priority: "{{ keepalived_instance_priority }}"
+#      auth_pass: "{{ keepalived_instance_auth_pass }}"
+#      virtual_ip: "{{ keepalived_instance_virtual_ip }}"
+#      virtual_router_id: 101
 
 - name: Auto-start Keepalived
   service:
