--- a/ansible/install_infra/roles/wireguard/tasks/main.yml
+++ b/ansible/install_infra/roles/wireguard/tasks/main.yml
@@ -7,7 +7,9 @@
     reload: yes
 
 - name: Configure UFW for Wireguard
-  import_tasks: ../../firewall/tasks/add-applications.yml
+  include_role:
+    name: firewall
+    tasks_from: add-applications
   vars:
     ufw_applications: "{{ wireguard_ufw_applications }}"
 
