--- a/ansible/install_infra/roles/wireguard/tasks/main.yml
+++ b/ansible/install_infra/roles/wireguard/tasks/main.yml
@@ -13,6 +13,13 @@
   vars:
     ufw_applications: "{{ wireguard_ufw_applications }}"
 
+- name: Configure Keepalived VirtualIP
+  include_role:
+    name: keepalived
+    tasks_from: add-virtual-ip
+  vars:
+    keepalived_instance: "{{ wireguard.keepalived_instance }}"
+
 - name: Install Linux kernel headers
   apt:
     name: linux-headers-amd64
