Add both nginx virtual ips under the same keepalived instance

--- a/ansible/install_infra/roles/nginx/tasks/main.yml
+++ b/ansible/install_infra/roles/nginx/tasks/main.yml
@@ -13,19 +13,12 @@
   vars:
     ufw_applications: "{{ nginx_ufw_applications }}"
 
-- name: Configure Keepalived public VirtualIP
+- name: Configure Keepalived VirtualIP
   include_role:
     name: keepalived
     tasks_from: add-virtual-ip
   vars:
-    keepalived_instance: "{{ nginx_keepalived_public_instance }}"
-
-- name: Configure Keepalived internal VirtualIP
-  include_role:
-    name: keepalived
-    tasks_from: add-virtual-ip
-  vars:
-    keepalived_instance: "{{ nginx_keepalived_internal_instance }}"
+    keepalived_instance: "{{ nginx_keepalived_instance }}"
 
 - name: Install NGinx
   apt:
