Add check for nginx virtual ip

--- a/ansible/install_infra/roles/nginx/vars/main.yml
+++ b/ansible/install_infra/roles/nginx/vars/main.yml
@@ -14,6 +14,9 @@ nginx_keepalived_instance:
     interface: "{{ nginx_keepalived_instance_public_interface }}"
     priority: "{{ nginx_keepalived_instance_public_priority | default(100) }}"
     auth_pass: "{{ nginx_keepalived_instance_public_auth_pass }}"
+    check_script:
+      script: /usr/bin/pgrep nginx
+      interval: 5
     virtual_ips: 
       - "{{ nginx_keepalived_instance_public_virtual_ip }}"
       - "{{ nginx_keepalived_instance_internal_virtual_ip }}"
