Only install keepalived on relevant hosts
It avoids having "down" instances in the exporter

--- a/ansible/install_infra/site.yml
+++ b/ansible/install_infra/site.yml
@@ -7,6 +7,10 @@
     - common-apt
     - firewall
     - usb-serial
+
+- name: Provision Keepalived
+  hosts: keepalived
+  roles:
     - keepalived
 
 - name: Provision OpenSSL PKI
