--- a/ansible/inventories/vagrant/inventory.ini
+++ b/ansible/inventories/vagrant/inventory.ini
@@ -12,6 +12,11 @@ master-1
 master-2
 master-3
 
+[keepalived:children]
+loadbalancers
+wireguard_servers
+kubernetes_masters
+
 [loadbalancers]
 master-1
 master-2
